<resources xmlns:ns0="urn:oasis:names:tc:xliff:document:1.2" xmlns:ns1="http://schemas.android.com/tools">
    <string name="highlight_msgmates_users">Highlight MsgMates Users</string>
    <string name="highlight_msgmates_users_desc">Show MsgMates users with special highlighting</string>
    <string name="sync_only_wifi">Sync Only WiFi</string>
    <string name="sync_period">Sync Period</string>
    <string name="sync_hourly">Hourly</string>
    <string name="sync_daily">Daily</string>
    <string name="sync_off">Off</string>
    <string name="sync_only_wifi_desc">Reduce mobile data usage</string>
    <string name="journal_share_daily">Günlük Paylaş</string>
    <string name="menu_create_group">Grup Kur</string>
    <string name="title_phone_login">Telefon Numaranla Giriş Yap</string>
    <string name="phone_entry_title">Telefon Numaranla Giriş Yap</string>
    <string name="phone_entry_subtitle">Telefon numaranı gir, sana doğrulama kodu gönderelim</string>
    <string name="phone_entry_hint">05XXXXXXXXX</string>
    <string name="phone_entry_helper">11 haneli Türk GSM numarası girin</string>
    <string name="action_send_code">Kodu Gönder</string>
    <string name="phone_entry_send_code">Kodu Gönder</string>
    <string name="label_terms">Kullanıcı Koşulları\'nı okudum ve kabul ediyorum</string>
    <string name="phone_entry_logo_desc">MsgMates logosu</string>
    <string name="phone_entry_input_desc">Telefon numarası girişi</string>
    <string name="privacy_policy">Gizlilik Politikası</string>
    <string name="terms_dialog_title">Kullanıcı Koşulları</string>
    <string name="terms_dialog_content">Bu uygulamayı kullanarak aşağıdaki koşulları kabul etmiş olursunuz:\n\n1. Kişisel verileriniz güvenli şekilde işlenir\n2. Mesajlaşma içerikleriniz şifrelenir\n3. Verileriniz üçüncü taraflarla paylaşılmaz\n4. Hesabınızı istediğiniz zaman silebilirsiniz\n\nDetaylı bilgi için gizlilik politikamızı inceleyebilirsiniz.</string>
    <string name="title_otp_verify">Kodu Doğrula</string>
    <string name="otp_verify_title">Kodu Doğrula</string>
    <string name="otp_verify_hint">6 haneli kod</string>
    <string name="otp_verify_helper">SMS ile gönderilen 6 haneli kodu gir</string>
    <string name="action_verify">Doğrula</string>
    <string name="action_resend_code">Kodu Tekrar Gönder</string>
    <string name="otp_verify_icon_desc">Güvenlik ikonu</string>
    <string name="otp_verify_input_desc">Doğrulama kodu girişi</string>
    <string name="otp_countdown">%1$02d:%2$02d içinde kodu tekrar gönder</string>
    <string name="otp_countdown_finished">Kodu tekrar gönderebilirsiniz</string>
    <string name="error_invalid_tr_phone">Lütfen 05 ile başlayan 11 haneli bir Türk GSM numarası girin.</string>
    <string name="error_terms_required">Devam etmek için Kullanıcı Koşulları\'nı kabul etmelisiniz.</string>
    <string name="error_otp_invalid">Doğrulama kodu hatalı. Lütfen tekrar deneyin.</string>
    <string name="error_otp_expired">Kodun süresi doldu. Yeniden kod isteyin.</string>
    <string name="error_otp_too_many_attempts">Çok fazla başarısız deneme. 30 saniye bekleyin.</string>
    <string name="error_network">Ağ bağlantısı hatası. Lütfen tekrar deneyin.</string>
    <string name="error_generic">Bir hata oluştu. Lütfen tekrar deneyin.</string>
    <string name="msg_code_sent">Doğrulama kodu gönderildi.</string>
    <string name="msg_verification_success">Doğrulama başarılı!</string>
    <string name="accessibility_send_message">Mesaj gönder</string>
    <string name="accessibility_attach_file">Dosya ekle</string>
    <string name="accessibility_record_audio">Sesli not kaydet</string>
    <string name="accessibility_play_audio">Sesli notu oynat</string>
    <string name="accessibility_download_file">Dosyayı indir</string>
    <string name="accessibility_call_audio">Sesli arama yap</string>
    <string name="accessibility_call_video">Görüntülü arama yap</string>
    <string name="accessibility_filter_chip">Filtre: %1$s</string>
    <string name="accessibility_unread_count">Okunmamış mesaj sayısı: %1$d</string>
    <string name="accessibility_typing_indicator">%1$s yazıyor</string>
    <string name="accessibility_message_status">Mesaj durumu: %1$s</string>
    <string name="accessibility_three_dots_menu">Daha fazla seçenek</string>
    <string name="accessibility_search">Ara</string>
    <string name="accessibility_quick_actions">Hızlı işlemler</string>
    <string name="type_message">Mesaj yazın...</string>
    <string name="send_message">Gönder</string>
    <string name="attach_file">Dosya ekle</string>
    <string name="record_voice">Sesli not kaydet</string>
    <string name="recording">Kaydediliyor...</string>
    <string name="release_to_send">Göndermek için bırakın</string>
    <string name="archive_title">Arşiv</string>
    <string name="disaster_switch">Afet Yayını</string>
    <string name="disaster_title">Afet Modu</string>
    <string name="caps_add">Kapsül Ekle</string>
    <string name="caps_edit">Kapsülü Kaydet</string>
    <string name="caps_empty">Kapsül yok.</string>
    <string name="caps_error_past">Geçmiş zamana kapsül oluşturulamaz.</string>
    <string name="caps_hint_body">Mesaj</string>
    <string name="caps_hint_title">Başlık</string>
    <string name="caps_pick_date">Tarih Seç</string>
    <string name="caps_pick_time">Saat Seç</string>
    <string name="caps_title">Mesaj Kapsülü</string>
    <string name="contact_card">Kişi kartı</string>
    <string name="contact_detail">Kişi Detayı</string>
    <string name="contacts_title">Kişiler</string>
    <string name="app_name">MsgMates</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_journal">Journal</string>
    <string name="nav_menu">Menu</string>
    <string name="menu_title">Menü</string>
    <string name="menu_ayarlar">Ayarlar</string>
    <string name="menu_afet_modu">Afet Modu</string>
    <string name="menu_webmsgmates">WebMsgMates</string>
    <string name="menu_mesaj_kapsulu">Mesaj Kapsülü</string>
    <string name="menu_kisa_notlar">Kısa Notlar</string>
    <string name="menu_arsiv">Arşiv</string>
    <string name="menu_bos_slot">Boş Slot</string>
    <string name="qa_broadcast">Broadcast</string>
    <string name="status_disaster">Disaster</string>
    <string name="menu_new">New</string>
    <string name="qa_self_note">Self Note</string>
    <string name="qa_new_chat">New Chat</string>
    <string name="qa_add_by_qr">Add by QR</string>
    <string name="status_live">Live</string>
    <string name="status_offline">Offline</string>
    <string name="status_sync">Sync</string>
    <string name="menu_video_call">Video Call</string>
    <string name="menu_voice_call">Voice Call</string>
    <string name="lock_pin_hint">PIN Girin</string>
    <string name="lock_set_pin">PIN Belirle</string>
    <string name="lock_unlock">Kilidi Aç</string>
    <string name="title_msgmates">MsgMates</string>
    <string name="hint_search_chats">Sohbetlerde ara...</string>
    <string name="refresh_contacts">Kişileri Yenile</string>
    <string name="quick_actions">Hızlı İşlemler</string>
    <string name="cd_filter_chip">Filtre: %1$s</string>
    <string name="filter_all">Tümü</string>
    <string name="filter_unread">Okunmamış</string>
    <string name="filter_groups">Gruplar</string>
    <string name="filter_favorites">Favoriler</string>
    <string name="action_archive_selected">Seçilenleri Arşivle</string>
    <string name="action_delete_selected">Seçilenleri Sil</string>
    <string name="action_filter">Filtrele</string>
    <string name="action_multi_select">Çoklu Seçim</string>
    <string name="action_restore_selected">Seçilenleri Geri Yükle</string>
    <string name="action_sort">Sırala</string>
    <string name="add_journal_entry">Günlük Ekle</string>
    <string name="add_photo">Fotoğraf Ekle</string>
    <string name="confirm_archive_message">Seçilen girişleri arşivlemek istediğinizden emin misiniz?</string>
    <string name="confirm_archive_no">Hayır</string>
    <string name="confirm_archive_title">Arşivle</string>
    <string name="confirm_archive_yes">Evet</string>
    <string name="confirm_delete_message">Seçilen girişleri silmek istediğinizden emin misiniz?</string>
    <string name="confirm_delete_no">Hayır</string>
    <string name="confirm_delete_title">Sil</string>
    <string name="journal_archive_entry">Arşivle</string>
    <string name="journal_delete_entry">Girişi Sil</string>
    <string name="journal_edit_entry">Girişi Düzenle</string>
    <string name="journal_favorite">Favorile</string>
    <string name="journal_share_entry">Paylaş</string>
    <string name="filter_move_up">Yukarı Taşı</string>
    <string name="filter_move_down">Aşağı Taşı</string>
    <string name="filter_hide">Gizle</string>
    <string name="qn_hint_title">Başlık</string>
    <string name="qn_hint_body">Not içeriği</string>
    <string name="qn_edit">Notu Düzenle</string>
    <string name="qn_add">Not Ekle</string>
    <string name="placeholder_title_devices">Cihazlar</string>
    <string name="placeholder_body_generic">İçerik yok</string>
    <string name="qn_hint">Not yazın...</string>
    <string name="qn_empty">Not yok</string>
    <string name="tos_text">Kullanım Şartları</string>
    <string name="tos_accept_check">Kabul ediyorum</string>
    <string name="accept_">Kabul Et</string>
    <string name="empty_contacts_description">Kişi bulunamadı</string>
    <string name="empty_contacts_title">Kişi Yok</string>
    <string name="empty_contacts_subtitle">Henüz kişi eklenmemiş</string>
    <string name="permission_contacts_description">Kişilerinize erişim için izin gerekli</string>
    <string name="permission_contacts_title">İzin Gerekli</string>
    <string name="permission_contacts_subtitle">Kişilerinizi görmek için izin verin</string>
    <string name="grant_permission">İzin Ver</string>
    <string name="open_settings">Ayarları Aç</string>
    <string name="cd_video_call">Görüntülü Arama</string>
    <string name="cd_voice_call">Sesli Arama</string>
    <string name="cd_more">Daha Fazla</string>
    <string name="menu_more">Daha Fazla</string>
    <string name="menu_view_profile">Profili Görüntüle</string>
    <string name="menu_search_in_chat">Sohbette Ara</string>
    <string name="menu_media_files">Medya Dosyaları</string>
    <string name="menu_mute_toggle">Sustur/Aç</string>
    <string name="menu_disappearing">Kaybolan Mesajlar</string>
    <string name="menu_chat_theme">Sohbet Teması</string>
    <string name="menu_report">Raporla</string>
    <string name="menu_block">Engelle</string>
    <string name="action_disaster_message">Afet Mesajı</string>
    <string name="cd_search">Ara</string>
    <string name="menu_search">Ara</string>
    <string name="cd_new_actions">Yeni İşlemler</string>
    <string name="menu_devices">Cihazlar</string>
    <string name="menu_starred">Yıldızlı</string>
    <string name="menu_archive">Arşiv</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="menu_switch_account">Hesap Değiştir</string>
    <string name="menu_help_feedback">Yardım &amp; Geri Bildirim</string>
    <string name="menu_about">Hakkında</string>
</resources>