<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        android:contentDescription="@string/cd_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_new"
        android:title="@string/menu_new"
        android:contentDescription="@string/cd_new_actions"
        android:tag="qa_action_new"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_overflow_root"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/menu_more"
        android:contentDescription="@string/cd_more"
        app:showAsAction="ifRoom" />

    <!-- Overflow Menü Kalemleri -->
    <item
        android:id="@+id/menu_create_group"
        android:title="@string/menu_create_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_devices"
        android:title="@string/menu_devices"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_starred"
        android:title="@string/menu_starred"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_archive"
        android:title="@string/menu_archive"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_switch_account"
        android:title="@string/menu_switch_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help_feedback"
        android:title="@string/menu_help_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_qa"
        android:title="QA Test"
        android:tag="qa_menu_qa"
        app:showAsAction="never" />

</menu>
