<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_multi_select"
        android:icon="@drawable/ic_checklist"
        android:title="@string/action_multi_select"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_selected"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete_selected"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_archive_selected"
        android:icon="@drawable/ic_archive"
        android:title="@string/action_archive_selected"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_restore_selected"
        android:icon="@drawable/ic_restore"
        android:title="@string/action_restore_selected"
        app:showAsAction="ifRoom"
        android:visible="false" />

</menu>
