<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/journal_edit_entry"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/journal_share_entry"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/journal_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/journal_archive_entry"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/journal_delete_entry"
        app:showAsAction="ifRoom" />

</menu>
