<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tos_text"
            android:layout_marginTop="12dp"/>

        <CheckBox
            android:id="@+id/cbAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tos_accept_check"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept_"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
</ScrollView>

