<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <EditText
      android:id="@+id/etNote"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/qn_hint"
      android:imeOptions="actionDone"
      android:inputType="textMultiLine"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/btnAdd"
      android:layout_margin="16dp"/>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/btnAdd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/qn_add"
      app:layout_constraintTop_toTopOf="@id/etNote"
      app:layout_constraintBottom_toBottomOf="@id/etNote"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="16dp"/>

  <TextView
      android:id="@+id/empty"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/qn_empty"
      android:visibility="gone"
      app:layout_constraintTop_toBottomOf="@id/etNote"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_margin="16dp"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/empty"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_margin="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>

